tests/expectations/compiler/constructor/constructor_without_async_fail.out
Error [EPAR0370005]: expected 'const', 'struct', 'record', 'mapping', '@', 'async', 'function', 'transition', 'inline', 'script', '}' -- found 'constructor'
    --> compiler-test:8:5
     |
   8 |     constructor() {
     |     ^^^^^^^^^^^
